--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ a.border {
     font-size: 40px;
     text-decoration: none;
     text-align: center;
-    color: rgb(238, 234, 234);
+    /* color: rgb(238, 234, 234); */
+    color: white;
     padding: 1px 16px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -40,7 +41,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 60%;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -77,6 +78,42 @@ header p {
     color: #1b1b1b;
 }
 
-section {
+.row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+
+}
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 5px;
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    color: #1b1b1b;
+
+
+}
+
+.column h2 {
+
+    color: rgb(126, 145, 174);
+}
+
+.column img {
+    transition: transform 0.2s ease-in-out;
+}
+
+.column img:hover {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+}
+
+
+*/ section {
     min-height: 100vh;
 }
