--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header p {
 }
 
 .column h2 {
-
+    margin-top: 5px;
     color: rgb(126, 145, 174);
 }
 
@@ -113,6 +113,25 @@ header p {
     transform: scale(0.9);
 }
 
+.personality {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(214, 210, 214);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+
+}
+
+.personality .about {
+    width: 25%;
+    height: 70%;
+    background-color: rgb(242, 242, 242);
+    border-top: 5px solid rgb(136, 154, 180);
+    border-radius: 2%;
+    box-shadow: 3px 7px 11px 0px rgba(95, 95, 95, 0.61)
+}
 
 */ section {
     min-height: 100vh;
