--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ header p {
     height: 70%;
     background-color: rgb(242, 242, 242);
     border-top: 5px solid rgb(136, 154, 180);
-    border-radius: 2%;
+    /* border-radius: 2%; */
     box-shadow: 3px 7px 11px 0px rgba(95, 95, 95, 0.61);
 }
 
