--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,15 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .navbar {
     display: flex;
     justify-content: center;
     overflow: hidden;
-    background-color: rgb(126, 145, 174);
+    background-color: rgba(126, 145, 174, 0.6);
     position: fixed;
     top: 0;
     width: 100%;
@@ -134,10 +138,15 @@ header p {
     border-radius: 2%;
     box-shadow: 3px 7px 11px 0px rgba(95, 95, 95, 0.61);
     font-family: 'Trebuchet', sans-serif;
-    margin-right: 3%;
+    /* margin-right: 3%; */
     color: #1b1b1b;
 
 
+}
+
+.margin_personality {
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .box .about {
@@ -173,10 +182,51 @@ header p {
     margin: 4% 4% 4% 4%;
 }
 
+/* Section portfolio*/
+.incognito {
+    position: absolute;
+    top: -60px;
+}
 
+.album {
+    position: relative;
+    width: 100%;
+    background-color: #cdcdcd;
+    overflow: hidden;
+    padding: 1%;
+}
 
+.container {
+    border-top: solid 5px blue;
+    width: 80%;
+    margin: 0 auto 20px auto;
+    background-color: beige;
+    overflow: hidden;
+    display: flex;
+    border-radius: 5px;
+}
 
+.text {
+    width: 50%;
+    padding: 1%;
+}
 
-*/ section {
-    min-height: 100vh;
+.photo {
+    width: 50%;
+
+    background-size: cover;
+    background-position: center;
+    min-height: 300px;
+}
+
+.photo_1 {
+    background-image: url(../images/portf1.jpg);
+}
+
+.photo_2 {
+    background-image: url(../images/portf2.jpg);
+}
+
+.photo_3 {
+    background-image: url(../images/portf3.jpg);
 }
