--- a/css/style.css
+++ b/css/style.css
@@ -30,13 +30,19 @@ a.border {
 }
 
 .logo {
+    width: 10%;
     z-index: 2;
     left: 5px;
-    top: 5px;
+    top: 92vh;
+    background-color: rgba(37, 39, 41, 0.164);
     position: fixed;
     animation: heartbeat 2s ease-in-out infinite both
 }
 
+.logo img {
+    width: 100%;
+
+}
 
 
 @keyframes heartbeat {
@@ -382,6 +388,7 @@ header p {
 
 /* mobile*/
 @media (max-width: 1199px) {
+
     .incognito {
         top: -63px;
     }
@@ -399,16 +406,6 @@ header p {
     }
 
     /*logo*/
-
-    .logo {
-        left: 8px;
-        top: 8px;
-    }
-
-    .logo img {
-        width: 80%;
-
-    }
 
     /*nav*/
     .navbar a {
@@ -482,12 +479,7 @@ header p {
 
     /*nav i logo*/
     .logo {
-        left: 8px;
-        top: 8px;
-    }
-
-    .logo img {
-        width: 60%;
+        width: 20%;
     }
 
     .navbar a {
@@ -622,8 +614,180 @@ header p {
 }
 
 @media (max-width: 575px) {
-    /*nav*/
 
+    /*nav i logo*/
 
+    .navbar a {
+        font-size: 20px;
+    }
 
+    /*heade*/
+    header h1 {
+        font-size: 90px;
+    }
+
+    header p {
+        font-size: 40px;
+    }
+
+    /*ekipa*/
+    .row {
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .column h1 {
+        font-size: 20px;
+    }
+
+    .column h2 {
+        font-size: 15px;
+        margin-bottom: 6px;
+    }
+
+    /*o nas*/
+    .personality .box {
+
+        width: 90%;
+        border-top: 3px solid rgb(126, 145, 174);
+    }
+
+    /*portfiolio*/
+    .incognito {
+        top: -40px;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .text h3 {
+        margin-bottom: 2px;
+        font-size: 18px;
+    }
+
+    .border_2 p {
+        margin-top: 7px;
+        font-size: 11px;
+    }
+
+    /*kontakt*/
+    .contact h1 {
+        font-size: 28px;
+        padding: 18px 0;
+    }
+
+    .contact input {
+        height: 30px;
+        font-size: 18px;
+    }
+
+    .contact textarea {
+        font-size: 18px;
+    }
+
+    .contact input,
+    .contact button,
+    .contact textarea {
+        margin-bottom: 14px;
+        padding: 5px;
+    }
+
+    .contact button {
+        font-size: 17px;
+        line-height: 27px;
+    }
+
+    .socials img {
+        width: 13%;
+    }
+}
+
+@media (max-width: 414px) {
+
+    .logo {
+        width: 22%;
+    }
+
+    /*header*/
+    header h1 {
+        font-size: 60px;
+    }
+
+    header p {
+        font-size: 30px;
+    }
+
+    /*ekipa*/
+    .column h1 {
+        font-size: 18px;
+    }
+
+    .column h2 {
+        font-size: 11px;
+        margin-bottom: 8px;
+    }
+
+    /* o nas*/
+
+    .personality .box {
+
+        width: 90%;
+        border-top: 3px solid rgb(126, 145, 174);
+    }
+
+    .box p {
+        font-size: 12px;
+    }
+
+    .personal_data h3 {
+        font-size: 18px;
+    }
+
+    .personal_data h4 {
+        font-size: 10px;
+    }
+
+    /*portfolio*/
+    .incognito {
+        top: -42px;
+    }
+
+    .container {
+        border-top: 3px solid rgb(126, 145, 174);
+    }
+
+    .text h3 {
+        font-size: 16px;
+    }
+
+    .border_2 p {
+        margin-top: 3px;
+        font-size: 10px;
+    }
+
+    /*kontakt*/
+    .contact h1 {
+        font-size: 25px;
+        padding: 14px 0;
+    }
+
+    .contact textarea {
+        font-size: 16px;
+    }
+
+    .contact button {
+        font-size: 15px;
+        line-height: 24px;
+    }
+
+    .contact input,
+    .contact button,
+    .contact textarea {
+        margin-bottom: 12px;
+    }
+
+    .socials img {
+        width: 17%;
+    }
 }
