--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ header p {
 .socials img {
     margin-bottom: 10px;
     width: 15%;
+    height: 15%;
 }
 
 /* mobile*/
@@ -407,6 +408,7 @@ header p {
     /*kontakt*/
     .socials img {
         width: 12%;
+        height: 12%;
     }
 
 
@@ -744,6 +746,8 @@ header p {
 
         .socials img {
             width: 13%;
+            height: 13%;
+
         }
     }
 
@@ -862,6 +866,7 @@ header p {
 
         .socials img {
             width: 17%;
+            height: 17%;
         }
     }
 
