--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,10 @@ a.border {
 }
 
 .logo {
-    width: 10%;
+    width: 18%;
     z-index: 2;
     left: 5px;
-    top: 92vh;
+    bottom: 2vh;
     background-color: rgba(37, 39, 41, 0.164);
     position: fixed;
     animation: heartbeat 2s ease-in-out infinite both
@@ -135,19 +135,21 @@ header p {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 100vh;
+    /* max-height: 100vh; */
     background-color: #f2f2f2;
 
 }
 
 .column {
     float: left;
-    width: 25%;
-    /* padding: 5px; */
+    width: 23%;
     text-align: center;
     font-family: 'Source Sans Pro', sans-serif;
-    /* font-size: 20px; */
     color: #1b1b1b;
+
+    /*dodane*/
+    padding: 8% 0;
+
 
 
 }
@@ -178,18 +180,75 @@ header p {
 .personality {
     position: relative;
     width: 100%;
-    height: 100vh;
+    /* max-height: 100vh; */
     background-color: #dfdede;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Trebuchet MS', sans-serif;
 
+    /*dodane*/
+    padding: 5% 0;
+
 
 }
 
+/*dodane*/
+
+
+.read-more-state {
+    display: none;
+}
+
+.read-more-target {
+    opacity: 0;
+    max-height: 0;
+    font-size: 0;
+    transition: .25s ease;
+}
+
+.read-more-state:checked~.read-more-wrap .read-more-target {
+    opacity: 1;
+    font-size: inherit;
+    max-height: 999em;
+}
+
+.read-more-state~.read-more-trigger:before {
+    content: 'Czytaj więcej';
+}
+
+.read-more-state:checked~.read-more-trigger:before {
+    content: 'Czytaj mniej';
+}
+
+.read-more-trigger {
+
+    cursor: pointer;
+    display: inline-block;
+    padding: 0 .5em;
+    color: #1e5799;
+    font-size: .9em;
+    line-height: 2;
+    border: 1px solid #1e5799;
+    border-radius: .25em;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    max-width: 100px;
+    max-height: 30px;
+    font-size: 12px;
+
+}
+
+.show-text {
+    display: none;
+}
+
+.show-text:target {
+    display: block;
+}
+
 .personality .box {
-    width: 23%;
+    width: 28%;
     height: 55%;
     /* height: 55%; */
     background-color: #f2f2f2;
@@ -204,8 +263,8 @@ header p {
 }
 
 .margin_personality {
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 .box .about {
@@ -290,10 +349,10 @@ header p {
 .border_2 p {
     margin-top: 10px;
     font-size: 15px;
-    overflow: overlay;
+    /* overflow: overlay;
     display: -webkit-box;
     -webkit-line-clamp: 13;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: vertical; */
 }
 
 .photo {
@@ -318,9 +377,10 @@ header p {
 /*Kontakt*/
 .contact {
     position: relative;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #dfdede;
     /* padding: 36px 20px; */
+    padding: 80px 0;
 }
 
 .contact h1 {
@@ -400,6 +460,15 @@ header p {
         top: -63px;
     }
 
+    /*header*/
+    header h1 {
+        font-size: 150px;
+    }
+
+    header p {
+        font-size: 75px;
+    }
+
     /*o nas*/
     .box p {
         -webkit-line-clamp: 13;
@@ -433,7 +502,10 @@ header p {
 
 }
 
+@media (max-width: 1024px) and (orientation: landscape) {}
+
 @media (max-width: 991px) {
+
 
     .incognito {
         top: -59px;
@@ -457,7 +529,7 @@ header p {
     }
 
     .column h2 {
-        font-size: 27px;
+        font-size: 25px;
     }
 
     /*o nas*/
@@ -465,8 +537,12 @@ header p {
         -webkit-line-clamp: 13;
     }
 
-    .personality .box {
-        width: 26%;
+    .personal_data h3 {
+        font-size: 25px;
+    }
+
+    .personal_data h4 {
+        font-size: 13px;
     }
 
     /* portfolio */
@@ -535,13 +611,13 @@ header p {
     }
 
     .column h2 {
-        font-size: 21px;
+        font-size: 19px;
 
     }
 
     /*o nas*/
     .personality {
-        display: flex;
+
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
@@ -551,11 +627,11 @@ header p {
         width: 70%;
         height: 28%;
         display: flex;
+        flex-wrap: wrap;
     }
 
     .margin_personality {
-        margin-left: 0%;
-        margin-right: 0%;
+        margin: 24px 0;
     }
 
     .box .about {
@@ -564,7 +640,8 @@ header p {
         justify-content: center;
         align-items: center;
         border-bottom: 0px;
-        margin: 8% 8% 8% 8%;
+        margin: 2% 2% 2% 2%;
+        width: 30%;
     }
 
     .about img {
@@ -592,6 +669,20 @@ header p {
         padding-left: 10px;
         border-left: 2px solid #dfdede;
         margin: 2% 2% 2% 2%;
+        width: 100%;
+    }
+
+    .input_class {
+        width: 64%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .read-more-trigger {
+
+        margin-left: 0;
+        margin-bottom: 5px;
     }
 
     /* portfolio*/
@@ -600,7 +691,7 @@ header p {
     }
 
     .container {
-        width: 90%;
+        width: 70%;
     }
 
     .text h3 {
@@ -617,6 +708,15 @@ header p {
     }
 
     /*kontakt*/
+    .contact {
+        padding: 57px 0;
+    }
+
+
+    .contact .wrap {
+        width: 70%;
+    }
+
     .contact h1 {
         font-size: 32px;
         padding: 25px 0;
@@ -659,7 +759,32 @@ header p {
     }
 
     .column h2 {
-        font-size: 17px;
+        font-size: 16px;
+    }
+
+    /*onas*/
+    .personal_data h3 {
+        font-size: 20px;
+    }
+
+    .personal_data h4 {
+        font-size: 12px;
+    }
+
+    /*portfolio*/
+    .container {
+        width: 70%;
+        flex-direction: column;
+    }
+
+    .photo {
+        width: 100%;
+        order: 1;
+    }
+
+    .text {
+        width: 100%;
+        order: 2;
     }
 
     .socials img {
@@ -686,34 +811,25 @@ header p {
     }
 
     /*ekipa*/
-    .row {
-        justify-content: center;
-        flex-direction: column;
-    }
 
     .column h1 {
         font-size: 20px;
     }
 
     .column h2 {
-        font-size: 15px;
+        font-size: 13px;
         margin-bottom: 6px;
     }
 
     /*o nas*/
-    .personality .box {
 
-        width: 90%;
-        border-top: 3px solid rgb(126, 145, 174);
+    .box p {
+        font-size: 13px;
     }
 
     /*portfiolio*/
     .incognito {
         top: -40px;
-    }
-
-    .container {
-        width: 100%;
     }
 
     .text h3 {
@@ -723,13 +839,10 @@ header p {
 
     .border_2 p {
         margin-top: 7px;
-        font-size: 11px;
+        font-size: 12px;
     }
 
     /*kontakt*/
-    .contact .wrap {
-        width: 49%;
-    }
 
     .contact h1 {
         font-size: 28px;
@@ -769,6 +882,7 @@ header p {
 }
 
 @media (max-width: 420px) {
+
     header h1 {
         font-size: 63px;
     }
@@ -777,14 +891,45 @@ header p {
         font-size: 30px;
     }
 
-    .column {
+    /*ekipa*/
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
 
-        width: 31%;
+    .column {
+        padding: 0;
+        margin-top: 20px;
+        width: 35%;
+
     }
 
     .column h2 {
         font-size: 14px;
         margin-bottom: 11px;
+    }
+
+    .personal_data h4 {
+        font-size: 10px;
+    }
+
+    /*onas*/
+    .personality .box {
+        width: 80%;
+    }
+
+    .personal_data h3 {
+        font-size: 18px;
+    }
+
+    /*portfolio*/
+    .container {
+        width: 80%;
+    }
+
+    /*kontakt*/
+    .contact .wrap {
+        width: 80%;
     }
 }
 
@@ -804,6 +949,8 @@ header p {
     }
 
     /*ekipa*/
+
+
     .column {
         width: 30%;
     }
@@ -821,7 +968,7 @@ header p {
 
     .personality .box {
 
-        width: 90%;
+        width: 80%;
         border-top: 3px solid rgb(126, 145, 174);
     }
 
@@ -852,19 +999,20 @@ header p {
 
     .border_2 p {
         margin-top: 3px;
-        font-size: 10px;
+        font-size: 12px;
     }
 
 
     /*kontakt*/
+    .contact {
+        padding: 75px 0;
+    }
+
     .contact h1 {
         font-size: 23px;
         padding: 14px 0;
     }
 
-    .contact .wrap {
-        width: 60%;
-    }
 
     .contact textarea {
         font-size: 16px;
@@ -901,6 +1049,16 @@ header p {
 
     header p {
         font-size: 26px;
+    }
+
+    /*onas*/
+    .about img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .personal_data h3 {
+        font-size: 16px;
     }
 
     /*ekipa*/
@@ -947,6 +1105,7 @@ header p {
     }
 
     /*kontakt*/
+
     .socials img {
         max-width: 30px;
         max-height: 30px;
