--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ header {
     background-position: 100% 60%;
     width: 100%;
     height: 100vh;
+    min-height: 465px;
     display: flex;
     flex-direction: column;
     align-items: center;
